# hotdoc

./: .gitignore  .gitmodules  .travis.yml  hotdoc.py.in  meson.build  meson_options.txt  pyproject.toml
documentation/markdown_files/: installing.markdown  releasing.markdown
hotdoc/: meson.build  run_hotdoc.py
hotdoc/core/: comment.py  config.py  database.py  extension.py  formatter.py  project.py  symbols.py  tree.py
hotdoc/core/templates/: alias.html  callable.html  class.html  member_list.html  multi_return_value.html  page.html  raw_code.html
hotdoc/core/tests/: test_project.py
hotdoc/parsers/: gtk_doc.py  meson.build
hotdoc/parsers/tests/: test_cmark_parser.py
hotdoc/tests/: fixtures.py
hotdoc/utils/: loggable.py  utils.py
scripts/: develop.py  manylinux.sh
subprojects/: cmark.wrap  hotdoc_bootstrap_theme.wrap
